@@ -13,6 +13,7 @@ Version 1.0.0 -
     and using Sphinx (http://sphinx.pocoo.org)
   * tested with Python 3.2 - OK
   * further compatibility-tests only for CPython 2.7 & CPython 3.2+
+  * added Drawing.add_xref(filename), for usage see examples/xref.py
 
 Version 0.3.6 - 14 November 2010
 
